<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/myTextView01"
        android:layout_marginTop="30dp"
        android:autoLink="all"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/main_link" />

    <TextView
        android:id="@+id/myTextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/main_oncreate_textview" />

    <Button
        android:id="@+id/btn_main_toweight1"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_main_activity"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="22dp"
        android:text="@string/weight_common_btn" />

    <Button
        android:id="@+id/btn_main_dialog"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_main_toweight1"
        android:layout_alignBottom="@+id/btn_main_toweight1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="33dp"
        android:text="@string/common_dialog" />

    <Button
        android:id="@+id/btn_main_changetextcolor"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_main_toweight1"
        android:layout_below="@+id/btn_main_toweight1"
        android:layout_marginTop="22dp"
        android:text="@string/main_btn_changecolor" />

    <Button
        android:id="@+id/btn_main_calculator"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_main_changetextcolor"
        android:layout_alignBottom="@+id/btn_main_changetextcolor"
        android:layout_alignLeft="@+id/btn_main_dialog"
        android:text="@string/main_btn_calculator" />

    <Button
        android:id="@+id/btn_main_layout"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_main_toweight1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        android:text="@string/main_layout_btn" />

    <Button
        android:id="@+id/btn_main_activity"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_main_layout"
        android:layout_alignBottom="@+id/btn_main_layout"
        android:layout_alignLeft="@+id/btn_main_dialog"
        android:text="@string/main_activity_btn" />

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_main_changetextcolor"
        android:layout_below="@+id/btn_main_changetextcolor"
        android:layout_marginTop="24dp"
        android:text="@string/main_btn_menu" />

    <Button
        android:id="@+id/btn_main_progress"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_main_calculator"
        android:layout_alignTop="@+id/btn_main_menu"
        android:text="@string/main_btn_progress" />

</RelativeLayout>